--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,13 @@
-folium
-streamlit-folium
-cftime
-contourpy
-cycler
-fonttools
-kiwisolver
-pyparsing
-xarray
-numpy
-netcdf4
-matplotlib
-branca
-xyzservices
+branca==0.7.2
+folium==0.16.0
+streamlit-folium==0.19.0
+xyzservices==2024.4.0
+cftime==1.6.3
+contourpy==1.2.1
+cycler==0.12.1
+fonttools==4.51.0
+kiwisolver==1.4.5
+matplotlib==3.8.4
+netcdf4==1.6.5
+pyparsing==3.1.2
+xarray==2024.3.0
