--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-branca==0.7.2
-folium==0.16.0
-streamlit-folium==0.19.0
-xyzservices==2024.4.0
+branca
+folium
+streamlit-folium
+xyzservices
 cftime==1.6.3
 contourpy==1.2.1
 cycler==0.12.1
