--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,12 @@ branca
 folium
 streamlit-folium
 xyzservices
-cftime==1.6.3
-contourpy==1.2.1
-cycler==0.12.1
-fonttools==4.51.0
-kiwisolver==1.4.5
-matplotlib==3.8.4
-netcdf4==1.6.5
-pyparsing==3.1.2
-xarray==2024.3.0
+cftime
+contourpy
+cycler
+fonttools
+kiwisolver
+matplotlib
+netcdf4
+pyparsing
+xarray
